--- a/style.css
+++ b/style.css
@@ -1,65 +1,67 @@
+/* Reset Style */
+ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  li, 
+  h3 {
+    list-style: none;
+  }
+  
+  input,
+  button {
+    outline: none;
+  }
+
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__image {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .aaa { 
+  .header { 
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.type-text,
+.task__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.task__text {
   display: flex;
 }
 
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li, 
-h3 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
-}
-
-button {
+.task__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +71,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.task__btn:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.task__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +86,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.type-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +99,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.type-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item .task__title {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-item .new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,51 +123,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.task__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.type-checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.type-text {
   width: 226px
 }
 
-button.delete img {
+.task__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task__image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-list .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.task__item .type-text {
   display: none
 }
 
-ul li.editMode input[type="text"] {
+.task__item.edit-mode .type-text {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.task__item.edit-mode .task__label {
   display: none;
 }
